@@ -2,16 +2,16 @@
 - name: Eaton | install nut
   apt: name={{item}} state=installed
   with_items:
-   - nut
+    - nut
   tags: 
-   - eaton
+    - nut
 
 - name: Eaton | Copy config files
-  template: src=nut/{{item}}.j2 
-            dest=/etc/nut/{{item}}
+  template: src=nut/{{item}}.conf.j2 
+            dest=/etc/nut/{{item}}.conf
             owner=root
             group=nut
-            chmod=0640
+            mode=0640
   with_items: 
     - nut
     - ups
@@ -19,39 +19,64 @@
     - upsmon
     - upssched
   tags: 
-   - eaton
+    - nut
+
 
 # lsusb | grep UPS | colrm 1 4 | colrm 15 | sed -r 's/([0-9]+) Device ([0-9]+)/\1\/\2/'
 - name: Eaton | Check device permission 
   shell: "chown 0666 /dev/bus/usb/002/006"
   tags: 
-   - eaton
+    - nut
 
 - name: Ensure SSL certificates have the correct directories
   file: path=/etc/pki/tls/{{item}} owner=root group=root mode=0755 state=directory
   with_items:
     - certs
     - private
-  tags: nut
+  tags: 
+    - nut
 
 - name: Ensure nut has its SSL certificate
-  copy: src=nut.crt dest=/etc/pki/tls/certs/nut.crt owner=root group=root mode=0500
-  tags: nut
+  copy: src=nut/nut.crt dest=/etc/pki/tls/certs/nut.crt owner=root group=root mode=0500
+  tags: 
+    - nut
 
 - name: Ensure nut has its SSL private key
-  copy: src=nut.key dest=/etc/pki/tls/private/nut.key owner=root group=root mode=0700
-  tags: nut
+  copy: src=nut/nut.key dest=/etc/pki/tls/private/nut.key owner=root group=root mode=0700
+  tags: 
+    - nut
 
 - name: Eaton | Client start
   service: name=nut-client state=started enabled=true
   tags: 
-   - eaton
+    - nut
 
 - name: Eaton | Server start
   service: name=nut-server state=started enabled=true
   tags: 
-   - eaton
+    - nut
 
+- name: Nut | Configure individual plugin
+  template: src=collectd/collectd.conf.d/{{item}}.conf.j2 
+            dest=/etc/collectd/collectd.conf.d/{{item}}.conf
+  with_items:
+    - nut
+  tags: 
+    - nut
+    - collectd
+  notify: 
+    - restart collectd
+
+- name: Nut | activate hddtemp
+  lineinfile: dest=/etc/collectd/collectd.conf
+              state=present
+              regexp="^#LoadPlugin nut"
+              line="LoadPlugin nut"
+  tags: 
+    - nut
+    - collectd
+  notify:
+    - restart collectd
 
 
 
