@@ -1,0 +1,3 @@
+<Plugin "nut">
+  UPS "eaton@localhost:{{ups_port}}"
+</Plugin>
